Initial commit of Literate Data Structures.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,24 +1,24 @@
 cmake_minimum_required(VERSION 2.8)
 include(noweb.cmake)
 include(UseLatex)
-set(cmake_noweb_C
+set(libds_C
     main.c)
-set(cmake_noweb_H
+set(libds_H
     main.h)
-set(cmake_noweb_TEX
+set(libds_TEX
     main.tex)
 
-tangle("${cmake_noweb_H}")
-tangle("${cmake_noweb_C}")
-weave("${cmake_noweb_TEX}")
-add_custom_target(tangle DEPENDS ${cmake_noweb_H} ${cmake_noweb_C})
-add_custom_target(weave DEPENDS ${cmake_noweb_TEX})
+tangle("${libds_H}")
+tangle("${libds_C}")
+weave("${libds_TEX}")
+add_custom_target(tangle DEPENDS ${libds_H} ${libds_C})
+add_custom_target(weave DEPENDS ${libds_TEX})
 
-add_executable(cmake_noweb ${cmake_noweb_C})
-add_dependencies(cmake_noweb tangle)
-target_link_libraries(cmake_noweb m)
+add_library(libds SHARED ${libds_C})
+add_dependencies(libds tangle)
+target_link_libraries(libds m)
 
-add_latex_document(cmake_noweb.tex
+add_latex_document(libds.tex
                    FORCE_PDF
-                   TARGET_NAME _cmake_noweb)
-add_dependencies(_cmake_noweb_pdf weave)
+                   TARGET_NAME _libds)
+add_dependencies(_libds_pdf weave)
